pkp/pkp-lib#5187 Prevent white space at top of page

--- a/styles/layout.less
+++ b/styles/layout.less
@@ -10,6 +10,7 @@
  */
 
 // A grey background on large screens
+html,
 body {
 	background: @bg-shade;
 }
